fix header spacing

--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,14 @@ a{
     color: white;
 }
 .header{
+    height: 40px;
     flex-direction: row;
     gap:50px;
     justify-content: space-around;
+    font-size: large;
+    align-items: center;
+    padding: 0 20px;
+    
     
     
 }
